--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,30 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <!-- <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css"> -->
+<!-- <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/leaflet/1.3.1/leaflet.css"> -->
+<!-- <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.4/dist/leaflet.css"
+   integrity="sha512-puBpdR0798OZvTTbP4A8Ix/l+A4dHDD0DGqYW6RQ+9jxkRFclaxxQb/SJAWZfWAkuyeQUytO7+7N4QKrDh+drA=="
+   crossorigin=""/> -->
+   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.3/dist/leaflet.css" />
+  <script src="https://unpkg.com/leaflet@1.0.3/dist/leaflet.js"></script>
+  <script src="https://unpkg.com/leaflet.vectorgrid@1.2.0"></script>
+
+<style>
+  body {
+    /* padding-bottom: 30px; */
+  }
+  h1, h2, p {
+    font-family: sans-serif;
+    text-align: center;
+  }
+  .leaflet-container {
+    height: 100%;
+    width: 100%;
+    /* margin: 0 auto; */
+  }
+    
+</style>
     <title>React App</title>
   </head>
   <body>
