Added the directions to the view

--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,7 @@
    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.3/dist/leaflet.css" />
   <script src="https://unpkg.com/leaflet@1.0.3/dist/leaflet.js"></script>
   <script src="https://unpkg.com/leaflet.vectorgrid@1.2.0"></script>
+  <link rel="stylesheet" href="https://unpkg.com/leaflet-routing-machine@latest/dist/leaflet-routing-machine.css" />
 
 <style>
   body {
@@ -41,7 +42,7 @@
     width: 100%;
     /* margin: 0 auto; */
   }
-    
+
 </style>
     <title>React App</title>
   </head>
